# total-recall

./: .gitignore  .gitleaksignore  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  TRADEMARKS.md  pyproject.toml
.github/workflows/: tests.yml
docs/: architecture.md  backup-dashboard.md  benchmarks.md  continuity-gap-analysis-2026-06-10.md  continuity-handoff-prompt.txt  continuity-implementation-handoff-2026-06-10.md  demo-guide.md  derived-memory-adapters.md  document-ingest.md  fortification-scorecard.md  hermes-handoff-total-recall-2026-06-04.md  hermes-report-exclusion-repair-2026-05-11.md  hermes.md  install.md  integrations.md  knowledge-engine-api.md  knowledge-engine-architecture.md  knowledge-engine-decisions.md  knowledge-engine-risks.md  knowledge-engine-roadmap.md  knowledge-engine-runbook.md  knowledge-engine-tribal-knowledge.md  nightly-learning.md  obsidian-vault-export.md  operational-manual.md  portable-clone-and-loop-ledger.md  public-launch.md  release-checklist.md  remote-backup-design.md  roadmap.md  total-recall-memory-layer-comparison-2026-06-03.md
docs/handoffs/: 2026-05-08-total-recall-future-adapters-compaction.md  2026-05-08-total-recall-lancedb-qmd-adapters.md  2026-05-08-total-recall-sqlite-fts-index.md
docs/plans/: hf-portable-clone-verification-wizard.md
hermes-plugin/total-recall/: README.md  __init__.py  plugin.yaml
scripts/: benchmark_total_recall.py  install_hermes_plugin.sh  install_smoke.sh  privacy_scan.py  repair_malformed_ledger_jsonl.py
src/total_recall_core/: __init__.py  api.py  cli.py  dashboard.py  hermes_installer.py  hermes_provider.py  knowledge.py  qmd_installer.py
src/total_recall_core/fixtures/: hermes_smoke_redacted.jsonl
tests/: test_core.py  test_dashboard.py  test_hermes_installer.py  test_hermes_plugin.py
