[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "total-recall-core"
version = "1.2.0"
description = "Framework-agnostic Total Recall continuity core"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Alex Covo" }]
dependencies = []

[project.optional-dependencies]
semantic = ["lancedb"]

[project.scripts]
total-recall = "total_recall_core.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
