[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "total-recall-core"
version = "1.3.0"
description = "Framework-agnostic Total Recall continuity core"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Alex Covo" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["cryptography>=42"]

[project.urls]
Homepage = "https://github.com/dax8it/total-recall"
Repository = "https://github.com/dax8it/total-recall"
Issues = "https://github.com/dax8it/total-recall/issues"
Commercial-Licensing = "https://github.com/dax8it/total-recall/blob/main/COMMERCIAL-LICENSE.md"

[project.optional-dependencies]
semantic = ["lancedb"]

[project.scripts]
total-recall = "total_recall_core.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
total_recall_core = ["fixtures/*.jsonl"]
